--- a/_config.yml
+++ b/_config.yml
@@ -13,36 +13,37 @@ baseurl: ""
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Asia/Kolkata
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: subhashh # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: my personal blog # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  a personal blog where thoughts and experiences are shared. Join me on this journey of self-discovery, inspiration, and meaningful reflections
+
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://subhashhhhhh.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: subhashhhhhh # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+# twitter:
+  # username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Subhash Gottumukkala
+  email: subhashgottumukkala17@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    # https://twitter.com/username # change to your twitter homepage
+    - https://github.com/subhashhhhhh # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -82,22 +83,14 @@ avatar:
 toc: true
 
 comments:
-  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
-  # The active options are as follows:
-  disqus:
-    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
-  # utterances settings › https://utteranc.es/
-  utterances:
-    repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
-  # Giscus options › https://giscus.app
+  active: 'giscus' # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo: "subhashhhhhh/subhashhhhhh.github.io" # <gh-username>/<repo>
+    repo_id: "R_kgDOJ40zVQ"
+    category: "General"
+    category_id: "DIC_kwDOJ40zVc4CXvh-"
     mapping: # optional, default to 'pathname'
-    input_position: # optional, default to 'bottom'
+    input_position: 'top' # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
     reactions_enabled: # optional, default to the value of `1`
 
