--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ theme_mode: [light]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/avatar/avatar.jpg
+avatar: /assets/img/avatar/avatar.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
