--- a/_config.yml
+++ b/_config.yml
@@ -1,91 +1,49 @@
-# The Site Configuration
-
-# Import the theme
 theme: jekyll-theme-chirpy
 
-# Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
-# and doesn't have a custom domain.
 baseurl: ''
 
-# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
-# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
-# otherwise, the layout language will use the default value of 'en'.
 lang: en
 
-# Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: Asia/Kolkata
-
-# jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-# ↓ --------------------------
 
 title: subhash's blog
 
-tagline: my personal blog # it will display as the sub-title
+tagline: my personal blog
 
-description: >- # used by seo meta and the atom feed
+description: >-
   a personal blog where thoughts and experiences are shared. Join me on this journey of self-discovery, inspiration, and meaningful reflections
 
-
-# fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://subhashhhhhh.github.io"
 
 github:
-  username: subhashhhhhh # change to your github username
+  username: subhashhhhhh
 
-# twitter:
-  # username: twitter_username # change to your twitter username
+ twitter:
+  username: subhashhhhhhhhh
 
 social:
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Subhash Gottumukkala
-  email: subhashgottumukkala17@gmail.com # change to your email address
+  email: subhashgottumukkala17@gmail.com
   links:
-    # The first element serves as the copyright owner's link
-    # https://twitter.com/username # change to your twitter homepage
-    - https://github.com/subhashhhhhh # change to your github homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://github.com/subhashhhhhh
+    - https://twitter.com/subhashhhhhhhhh
+    - https://www.linkedin.com/in/subhashgottumukkala
 
-google_site_verification: # fill in to your verification string
-
-# ↑ --------------------------
-# The end of `jekyll-seo-tag` settings
+google_site_verification: 1L5ex5TJUsdv-B8DG7oMfweBM_WkDZQr7z3Ba2MGDLU
 
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: 'G-99TM6KXFM4' # fill in your Google Analytics ID
 
-# Prefer color scheme setting.
-#
-# Note: Keep empty will follow the system prefer color by default,
-# and there will be a toggle to switch the theme between dark and light
-# on the bottom left of the sidebar.
-#
-# Available options:
-#
-#     light  - Use the light color scheme
-#     dark   - Use the dark color scheme
-#
 theme_mode: [light]
 
-# The CDN endpoint for images.
-# Notice that once it is assigned, the CDN url
-# will be added to all image (site avatar & posts' images) paths starting with '/'
-#
-# e.g. 'https://cdn.com'
-img_cdn:
-
-# the avatar on sidebar, support local or CORS resources
 avatar: /assets/img/avatar/avatar.png
 
-# boolean type, the global switch for TOC in posts.
 toc: true
 
 comments:
-  active: 'giscus' # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: 'giscus'
   giscus:
-    repo: "subhashhhhhh/subhashhhhhh.github.io" # <gh-username>/<repo>
+    repo: "subhashhhhhh/subhashhhhhh.github.io"
     repo_id: "R_kgDOJ40zVQ"
     category: "General"
     category_id: "DIC_kwDOJ40zVc4CXvh-"
@@ -103,7 +61,7 @@ assets:
     env: # [development|production]
 
 pwa:
-  enabled: true # the option for PWA feature
+  enabled: false # the option for PWA feature
 
 paginate: 10
 
