--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ social:
     - https://twitter.com/subhashhhhhhhhh
     - https://www.linkedin.com/in/subhashgottumukkala
 
-google_site_verification: 1L5ex5TJUsdv-B8DG7oMfweBM_WkDZQr7z3Ba2MGDLU
+google_site_verification:
 
 google_analytics:
   id: 'G-99TM6KXFM4' # fill in your Google Analytics ID
