--- a/_data/share.yml
+++ b/_data/share.yml
@@ -1,3 +1,6 @@
+#  Sharing options at the bottom of the post.
+#  Icons from <https://fontawesome.com/>
+
 platforms:
   - type: Twitter
     icon: "fab fa-twitter"
@@ -11,10 +14,12 @@ platforms:
     icon: "fab fa-telegram"
     link: "https://t.me/share/url?url=URL&text=TITLE"
 
-   - type: Linkedin
-     icon: "fab fa-linkedin"
-     link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
-
+  # Uncomment below if you need to.
+  #
+  # - type: Linkedin
+  #   icon: "fab fa-linkedin"
+  #   link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
+  #
   # - type: Weibo
   #   icon: "fab fa-weibo"
   #   link: "http://service.weibo.com/share/share.php?title=TITLE&url=URL"
