--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >-
   a personal blog where thoughts and experiences are shared. Join me on this journey of self-discovery, inspiration, and meaningful reflections
 
 
-url: "https://subhashhhhhh.github.io"
+url: "https://subhashh.tech"
 
 
 github:
