--- a/_config.yml
+++ b/_config.yml
@@ -1,159 +1,9 @@
-theme: jekyll-theme-chirpy
-
-
-baseurl: ''
-
-
-lang: en
-
-
-timezone: Asia/Kolkata
-
-
-title: subhash's blog
-
-
-tagline: my personal blog
-
-
-description: >-
-  a personal blog where thoughts and experiences are shared. Join me on this journey of self-discovery, inspiration, and meaningful reflections
-
-
-url: "https://subhashh.tech"
-
-
-github:
-  username: subhashhhhhh
-
-twitter:
-  username: subhashhhhhhhhh
-
-
-social:
-  name: Subhash Gottumukkala
-  email: subhashgottumukkala17@gmail.com
-  links:
-    - https://github.com/subhashhhhhh
-    - https://twitter.com/subhashhhhhhhhh
-    - https://www.linkedin.com/in/subhashgottumukkala
-
-
-google_analytics:
-  id: # fill in your Google Analytics ID
-
-
-img_cdn:
-
-
-theme_mode: [light]
-
-avatar: /assets/img/avatar/avatar.png
-
-
-toc: true
-
-comments:
-  active: 'giscus'
-  giscus:
-    repo: "subhashhhhhh/subhashhhhhh.github.io"
-    repo_id: "R_kgDOJ40zVQ"
-    category: "General"
-    category_id: "DIC_kwDOJ40zVc4CXvh-"
-    mapping: # optional, default to 'pathname'
-    input_position: 'top' # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
-
-# Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
-assets:
-  self_host:
-    enabled: # boolean, keep empty means false
-    # specify the Jekyll environment, empty means both
-    # only works if `assets.self_host.enabled` is 'true'
-    env: # [development|production]
-
-pwa:
-  enabled: false # the option for PWA feature
-
-paginate: 10
-
-# ------------ The following options are not recommended to be modified ------------------
-
-kramdown:
-  syntax_highlighter: rouge
-  syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
-    css_class: highlight
-    # default_lang: console
-    span:
-      line_numbers: false
-    block:
-      line_numbers: true
-      start_line: 1
-
-collections:
-  tabs:
-    output: true
-    sort_by: order
-
-defaults:
-  - scope:
-      path: "" # An empty string here means all files in the project
-      type: posts
-    values:
-      layout: post
-      comments: true # Enable comments in posts.
-      toc: true # Display TOC column in posts.
-      # DO NOT modify the following parameter unless you are confident enough
-      # to update the code of all other post links in this project.
-      permalink: /posts/:title/
-  - scope:
-      path: _drafts
-    values:
-      comments: false
-  - scope:
-      path: ""
-      type: tabs # see `site.collections`
-    values:
-      layout: page
-      permalink: /:title/
-  - scope:
-      path: assets/img/favicons
-    values:
-      swcache: true
-  - scope:
-      path: assets/js/dist
-    values:
-      swcache: true
-
-sass:
-  style: compressed
-
-compress_html:
-  clippings: all
-  comments: all
-  endings: all
-  profile: false
-  blanklines: false
-  ignore:
-    envs: [development]
-
-exclude:
-  - "*.gem"
-  - "*.gemspec"
-  - tools
-  - README.md
-  - CHANGELOG.md
-  - LICENSE
-  - rollup.config.js
-  - node_modules
-  - package*.json
-
-jekyll-archives:
-  enabled: [categories, tags]
-  layouts:
-    category: category
-    tag: tag
-  permalinks:
-    tag: /tags/:name/
-    category: /categories/:name/
+paginate:            5
+markdown:            kramdown
+highlighter:         rouge
+permalink:           /:title
+plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
+title:		           'subhashh'
+author:              'Subhash Gottumukkala'
+feed:
+  path: rss-feed.xml
