--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,11 +1,4 @@
-# Change 'comments' to true for Disqus comments
-disqus:
-  comments: false
-  disqus_shortname: 'https-lenpaul-github-io-lagrange'
-  
-
-# If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-1'
+google-ID: 'G-99TM6KXFM4'
 
 menu:
 - {name: 'Archives', url: 'archives.html'}
@@ -16,8 +9,7 @@ social:
 - {icon: 'github',     link: 'https://www.github.com/subhashhhhhh'}
 - {icon: 'linkedin',   link: 'http://www.linkedin.com/in/subhashgottumukkala/'}
 - {icon: 'envelope',   link: 'mailto:subhashgottumukkala17@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
-# - {icon: 'rss-square', link: '/rss-feed.xml'}
+- {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
 pagination:
